--- a/app/src/main/res/layout/fragment_eventos.xml
+++ b/app/src/main/res/layout/fragment_eventos.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="16dp"
-    tools:context=".Eventos">
+    tools:context=".EventosFragment">
+
+    <!-- TODO: Update blank fragment layout -->
 
     <TextView
         android:id="@+id/tv_feed"
@@ -16,39 +16,22 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="36dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="23dp"
         android:text="Eventos"
         android:textColor="@color/tituloPrincipal"
         android:textSize="24dp"
         android:textStyle="bold" />
-
     <TextView
         android:id="@+id/tv_texto2"
         android:layout_width="316dp"
-        android:layout_height="83dp"
-        android:layout_below="@+id/tv_feed"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
+        android:layout_height="53dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="45dp"
         android:text="@string/tx_eventos"
         android:textColor="@color/textoInfo"
         android:textSize="15dp" />
 
-    <!-- Recycler View -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="69dp"
-        android:layout_height="90dp"
-        android:layout_below="@+id/tv_texto2"
-        android:layout_marginTop="47dp"
-        android:layout_marginStart="36dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-
-</RelativeLayout>
+</FrameLayout>
